Adds flowplayer to local directory

--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
 <body>
 	<h1>B-Detection Test (in green)</h1>
 	
-	<div class="container">
+	<div class="top-container">
 		<div class="flowplayer">
 	   <video>
 	      <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
 	   </video>
 		</div>
+	</div>
+
+	<div class="bottom-container">
+		<a
+    href="bbb-800.mp4"
+    style="display:block;width:480px;height:300px;"
+    id="player">
+ 
+		<!-- splash image inside the container -->
+		<img src="/media/img/home/flow_eye.jpg"
+    alt="Search engine friendly content" />
+ 
+		</a>
 	</div>
 
 </body>
